Fixing color for timeline date light mode on smaller devices.

--- a/src/assets/css/aboutMe.css
+++ b/src/assets/css/aboutMe.css
@@ -39,7 +39,7 @@
 
 
 .light-mode .vertical-timeline-element-date{
-  color: #000 !important;
+  color: #9b9b9b  !important;
 }
 
 .dark-mode .vertical-timeline-element-date{
